# Capstone_SlamDog

./: README.md  Schedule  Untitled Diagram.drawio
android_apps/: build.gradle  settings.gradle
android_apps/blindguide/src/main/: AndroidManifest.xml
android_apps/blindguide/src/main/java/com/github/rosjava/android_apps/blind_guide/: FileLoaderClient.java  MainActivity.java  NavigationActivity.java  NavigationResultServer.java  RobotSettingClient.java  SelectActivity.java  SetPoseClient.java  VoiceAssi.java
android_apps/blindguide/src/main/java/com/github/rosjava/android_apps/blind_guide/data_manager/: dataLoader.java  dataLoaderRequest.java  dataLoaderResponse.java  sendLocData.java  sendLocDataRequest.java  sendLocDataResponse.java  setPose.java  setPoseRequest.java  setPoseResponse.java
android_apps/blindguide/src/main/java/com/github/rosjava/android_apps/blind_guide/slamdog_navi/: arrivalType.java  arrivalTypeRequest.java  arrivalTypeResponse.java
android_apps/blindguide/src/main/res/drawable/: button_selector1.xml  button_selector2.xml  button_selector3.xml  button_selector4.xml  button_selector5.xml  button_selector6.xml  ic_baseline_hearing_24.xml
android_apps/blindguide/src/main/res/layout/: navigation_view.xml  select_view.xml
android_apps/blindguide/src/main/res/layout-v21/: main.xml
android_apps/blindguide/src/main/res/values/: color.xml  strings.xml
android_apps/make_a_map/: build.gradle
android_apps/make_a_map/gradle/wrapper/: gradle-wrapper.properties
android_apps/make_a_map/src/main/: AndroidManifest.xml
android_apps/make_a_map/src/main/java/com/github/rosjava/android_apps/make_a_map/: Client.java  MainActivity.java  QrCodeMsgSubscriber.java  Server.java  VelocityPublisher.java
android_apps/make_a_map/src/main/java/com/github/rosjava/android_apps/make_a_map/ros_custom_service/: SaveMap.java  SaveMapRequest.java  SaveMapResponse.java  SaveServiceResponseListener.java
android_apps/make_a_map/src/main/java/com/github/rosjava/android_apps/make_a_map/ros_msgs_tutorial/: srvTutorial.java  srvTutorialRequest.java  srvTutorialResponse.java
android_apps/make_a_map/src/main/res/layout/: main.xml
android_apps/make_a_map/src/main/res/values/: strings.xml
android_apps/teleop/src/main/java/com/github/rosjava/android_apps/teleop/: MainActivity.java  VelocitySubscriber.java
android_apps/teleop/src/main/res/layout/: main.xml
catkin_ws/src/models/qrcode_box_609/: model.config  model.sdf  qrcode_box_609.material
catkin_ws/src/models/qrcode_box_611/: model.config  model.sdf  qrcode_box_611.material
catkin_ws/src/turtlebot_custom/: CMakeLists.txt
catkin_ws/src/turtlebot_custom/launch/: custom_slam.launch
data_manager/: CMakeLists.txt  package.xml
data_manager/src/: data_loader_srv_client.cpp  data_loader_srv_server.cpp  data_loader_srv_server.py  loc_file_reader_server.py  send_loc_data_server.py
data_manager/srv/: dataLoader.srv
qrcode/: CMakeLists.txt  cmake_install.cmake  package.xml
qrcode/catkin_generated/: generate_cached_setup.py
qrcode/devel/: .catkin  .rosinstall
qrcode/gtest/: CTestTestfile.cmake  cmake_install.cmake
qrcode/gtest/gtest/: CTestTestfile.cmake
qrcode/scripts/: data_loader.py  qrcode_data_server.py  qrcode_scanner.py
ros_msgs_tutorial/: CMakeLists.txt  package.xml
ros_msgs_tutorial/src/: ros_tutorial_msg_publisher.cpp  ros_tutorial_msg_subscriber.cpp  ros_tutorial_srv_client.cpp  ros_tutorial_srv_server.cpp
simple_navigation_goals/: CMakeLists.txt  package.xml  test.txt
simple_navigation_goals/src/: simple_navigation_goals.cpp
slamdog/maps/: map.pgm  map.yaml
slamdog/slamdog_navi/: CMakeLists.txt  package.xml
slamdog/slamdog_navi/param/: initial_pose.yaml
slamdog/slamdog_navi/src/: Untitled Document  back1  get_depth_data.cpp  navi_result_sender_client.cpp  navi_result_sender_server.cpp  pose_initialization.cpp  simple_navigation_goals.cpp  slam_dog_navi.cpp  slamdog_navi.cpp
slamdog/slamdog_navi/srv/: arrivalType.srv  dataLoader.srv
slamdog/slamdog_qrcode/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  package.xml
slamdog/slamdog_qrcode/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
slamdog/slamdog_qrcode/catkin_generated/installspace/: _setup_util.py  qrcode.pc  qrcodeConfig.cmake
slamdog/slamdog_qrcode/catkin_generated/stamps/qrcode/: package.xml.stamp
slamdog/slamdog_qrcode/data/: qr_code_data.txt  test.txt
slamdog/slamdog_qrcode/devel/: local_setup.sh  setup.sh
slamdog/slamdog_qrcode/devel/lib/pkgconfig/: qrcode.pc
slamdog/slamdog_qrcode/devel/share/qrcode/cmake/: qrcodeConfig.cmake
slamdog/slamdog_qrcode/gtest/: Makefile
slamdog/slamdog_qrcode/gtest/gtest/: Makefile
slamdog/slamdog_qrcode/scripts/: back  data_loader.py  qrcode_data_client.py  qrcode_data_server.py  qrcode_scanner.py  qrcode_scanner_back.py  stack.py  test.py
slamdog/slamdog_slam/: CMakeLists.txt  package.xml
slamdog/slamdog_slam/launch/: slamdog_slam.launch
slamdog/slamdog_srv_navi/: CMakeLists.txt  package.xml
slamdog/slamdog_srv_navi/src/: data_loader_srv_client.py  loc_file_reader_server.py  pose_initialization_client.py  pose_initialization_server.py  position_init_server.py  send_loc_data_client.py  send_loc_data_server.py
slamdog/slamdog_srv_slam/: CMakeLists.txt  package.xml
slamdog/slamdog_srv_slam/src/: ros_tutorial_msg_publisher.cpp  ros_tutorial_msg_subscriber.cpp  ros_tutorial_srv_client.cpp  ros_tutorial_srv_server.cpp
turtlebot_custom/: package.xml
turtlebot_custom/launch/: custom_slam.launch
turtlebot_custom/src/: custom_teleop.py
