<?xml version="1.0"?>
<package format="2">
  <name>data_manager</name>
  <version>0.0.0</version>
  <description>The data_manager package</description>

  <maintainer email="daeun@todo.todo">daeun</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export></export>
</package>
