<?xml version="1.0"?>
<package format="2">
  <name>slamdog_srv_navi</name>
  <version>0.0.0</version>
  <description>The slamdog_srv_navi package</description>

  <maintainer email="daeun@todo.todo">daeun</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export></export>
</package>
